fixed spacing between semester and times on course show page

--- a/app/assets/stylesheets/courses.css.less
+++ b/app/assets/stylesheets/courses.css.less
@@ -29,3 +29,7 @@ th {
 .prfssr{
   margin-left: 5px;
 }
+
+p {
+  margin-bottom: 0px;
+}
